<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="com_mixpanel_android_survey_alert_title">We\'d love your feedback!</string>
    <string name="com_mixpanel_android_survey_alert_message">Mind taking a quick survey?"</string>
    <string name="com_mixpanel_android_survey_alert_positive_button">Sure</string>
    <string name="com_mixpanel_android_survey_alert_negative_button">No, Thanks</string>
    <string name="com_mixpanel_android_survey_remaining_questions">%1$s of %2$s</string>
    <color name="com_mixpanel_android_selected">#66ffffff</color>
</resources>
