<?xml version="1.0" ?>
<LinearLayout
    android:id="@+id/com_mixpanel_android_activity_survey_id"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/com_mixpanel_android_button_previous"
            android:layout_width="35dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/com_mixpanel_android_arrowleft_insets"
            android:clickable="true"
            android:contentDescription="@string/com_mixpanel_android_previous"
            android:onClick="goToPreviousQuestion"
            tools:ignore="RtlHardcoded"/>

        <ImageButton
            android:id="@+id/com_mixpanel_android_button_next"
            android:layout_width="35dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/com_mixpanel_android_arrowright_insets"
            android:clickable="true"
            android:contentDescription="@string/com_mixpanel_android_next"
            android:onClick="goToNextQuestion"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/com_mixpanel_android_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@id/com_mixpanel_android_button_next"
            android:layout_toRightOf="@id/com_mixpanel_android_button_previous"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded,SpUsage"/>

    </RelativeLayout>

    <com.mixpanel.android.surveys.CardCarouselLayout
        android:id="@+id/com_mixpanel_android_question_card_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@string/com_mixpanel_android_logo"
            android:scaleType="fitStart"
            android:src="@drawable/com_mixpanel_android_logo"
            tools:ignore="RtlHardcoded"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.mixpanel.android.surveys.FadeOnPressButton
            android:id="@+id/com_mixpanel_android_button_exit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="3dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="right|center_vertical"
            android:onClick="completeSurvey"
            android:paddingBottom="0dp"
            android:text="@string/com_mixpanel_android_exit"
            android:textColor="#ffffff"
            android:textSize="20dp"
            tools:ignore="RtlHardcoded,SpUsage"/>

    </LinearLayout>

</LinearLayout>
