<?xml version="1.0" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_mixpanel_android_notification_full_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/com_mixpanel_android_button_exit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/com_mixpanel_android_close"
            android:contentDescription="@string/com_mixpanel_android_close" />

    </LinearLayout>
    
    <ImageView
        android:id="@+id/com_mixpanel_android_notification_image"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.00"
        android:contentDescription="@string/com_mixpanel_android_notification_image"
        android:cropToPadding="true"
        android:padding="30dp"
        android:scaleType="fitCenter"
        android:background="@drawable/com_mixpanel_android_square_dropshadow"
        android:src="@drawable/com_mixpanel_android_notification_placeholder" />
    
    <TextView
        android:id="@+id/com_mixpanel_android_notification_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/com_mixpanel_android_notification_subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="#a8a8a8" />
    
    <Button
        android:id="@+id/com_mixpanel_android_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:minWidth="175dp"
        android:text="@string/com_mixpanel_android_done"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/com_mixpanel_android_cta_button" />
</LinearLayout>